Getting the Rendering tab to at least show all the character models at once, as a start...

--- a/src/gui/EditorWindow/EditorWindow.axaml
+++ b/src/gui/EditorWindow/EditorWindow.axaml
@@ -202,7 +202,8 @@
         <views:ScriptPanel DataContext="{Binding scriptPanelVM}" Padding="10"/>
       </Panel></TabItem>
       <TabItem Header="Render" Margin="5"><Panel>
-        <TextBlock Text="Coming soon..." />
+        <!--TextBlock Text="Coming soon..." /-->
+        <views:GFDRenderingPanel DataContext="{Binding CommonVMs.Render}" Width="800" Height="600"/>
       </Panel></TabItem>
     </TabControl>
   </DockPanel>
